@@ -1,3 +1,14 @@
+2007-02-22  Fernando Perez  <Fernando.Perez@colorado.edu>
+
+	* IPython/genutils.py (clock): I modified clock() to return total
+	time, user+system.  This is a more commonly needed metric.  I also
+	introduced the new clocku/clocks to get only user/system time if
+	one wants those instead.
+	
+	***WARNING: API CHANGE*** clock() used to return only user time,
+	so if you want exactly the same results as before, use clocku
+	instead.
+
 2007-02-22  Ville Vainio  <vivainio@gmail.com>
 
 	* IPython/Extensions/ipy_p4.py: Extension for improved
